--- a/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
+++ b/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
@@ -785,7 +785,7 @@ Le diagramme d’activité qu’illustre la figure~\ref{activiteAuth} décrit le
 %\subsection{Diagramme de séquence}
 %\newpage
 
-\subsection{Diagramme de classe}
+\subsection{Diagramme de classes}
 Afin de bien détailler l’architecture de la base de données, nous avons conçu le diagramme de
 classe représenté dans la figure~\ref{fig4:class}.
 \begin{figure}[h!]
