--- a/Template LaTeX/TeXFiles/newIntro.tex
+++ b/Template LaTeX/TeXFiles/newIntro.tex
@@ -2,48 +2,57 @@
 \chapter*{Introduction générale}
 \addcontentsline{toc}{chapter}{Introduction générale}
 \begin{comment}
-
-Actuellement, à travers les progrès de la technologie, le smartphone est devenu un outil
-indispensable de travail qui peut apporter un plus dans la vie professionnelle et sociale de tout
-un chacun. D’ailleurs cela s’illustre parfaitement dans le domaine du Mobile Money qui est
-l’une des plus grandes évolutions dans le secteur consacré aux transfert d'argent 
-de l’europe vers l'afrique où une grande partie de la population de 
-l'afrique  n'a pas de compte bancaire.\newline
-Au fur et à mesure on entend désormais partout, le processus KYC (Know Your Customer) se déploie dans de nombreux secteurs d’activité. Véritable atout pour combattre la fraude et l’usurpation d’identité, un processus KYC, lorsqu’il est correctement déployé, offre aujourd’hui une multitude d’avantages aux utilisateurs comme aux entreprises.\newline
-Dans notre société, l’information est devenue un élément à la fois stratégique pour développer les
-activités, et essentiel pour assurer un avantage concurrentiel (optimisation des coûts, meilleure
-satisfaction client…) aux entités qui savent l’utiliser. C’est ce constat qui explique pourquoi les
-entreprises cherchent aujourd’hui à mettre en place des systèmes de collecte et de traitement de
-données toujours plus performants.
-De même, la satisfaction du client est plus que jamais au centre des préoccupations des entreprises et
-se concrétise par une gestion personnalisée de la relation client : comprendre les clients et leurs
-attentes, les fdéliser, les inciter à consommer davantage. Le CRM, Customer Relationship
-Management (GRC en français) a pour objet d'identifer, attirer et conserver les meilleurs clients et
-d'en retirer chiffre d'affaire et rentabilité.
-Ainsi le CRM englobe l'ensemble des activités et des processus que doit mettre en place une entreprise
-pour interagir avec ses clients et ses prospects afn de leur fournir des produits et des services adéquats
-au bon moment. Les entreprises ont de plus en plus recours à une approche de type de CRM, afn de se 
-différencier. En effet, la banalisation de l'offre, une exigence accrue du client conduisent les
-entreprises à faire évoluer leur offre dans le sens d'une plus grande personnalisation. Afn de parvenir
-à cet objectif, l'entreprise est tenue de s'adapter à la profusion des canaux d'accès parallèles et en
-particulier Internet.
-L'arrivée des Nouvelles Technologies de l'Information et de la Communication a en effet un impact
-très important sur les attitudes et les stratégies des entreprises face au CRM. Si bien que l'on peut se
-demander si l'E-CRM, la gestion de la relation client par Internet constitue une véritable révolution
-pour le CRM.
+	
+	Actuellement, à travers les progrès de la technologie, le smartphone est devenu un outil
+	indispensable de travail qui peut apporter un plus dans la vie professionnelle et sociale de tout
+	un chacun. D’ailleurs cela s’illustre parfaitement dans le domaine du Mobile Money qui est
+	l’une des plus grandes évolutions dans le secteur consacré aux transfert d'argent 
+	de l’europe vers l'afrique où une grande partie de la population de 
+	l'afrique  n'a pas de compte bancaire.\newline
+	Au fur et à mesure on entend désormais partout, le processus KYC (Know Your Customer) se déploie dans de nombreux secteurs d’activité. Véritable atout pour combattre la fraude et l’usurpation d’identité, un processus KYC, lorsqu’il est correctement déployé, offre aujourd’hui une multitude d’avantages aux utilisateurs comme aux entreprises.\newline
+	Dans notre société, l’information est devenue un élément à la fois stratégique pour développer les
+	activités, et essentiel pour assurer un avantage concurrentiel (optimisation des coûts, meilleure
+	satisfaction client…) aux entités qui savent l’utiliser. C’est ce constat qui explique pourquoi les
+	entreprises cherchent aujourd’hui à mettre en place des systèmes de collecte et de traitement de
+	données toujours plus performants.
+	De même, la satisfaction du client est plus que jamais au centre des préoccupations des entreprises et
+	se concrétise par une gestion personnalisée de la relation client : comprendre les clients et leurs
+	attentes, les fdéliser, les inciter à consommer davantage. Le CRM, Customer Relationship
+	Management (GRC en français) a pour objet d'identifer, attirer et conserver les meilleurs clients et
+	d'en retirer chiffre d'affaire et rentabilité.
+	Ainsi le CRM englobe l'ensemble des activités et des processus que doit mettre en place une entreprise
+	pour interagir avec ses clients et ses prospects afn de leur fournir des produits et des services adéquats
+	au bon moment. Les entreprises ont de plus en plus recours à une approche de type de CRM, afn de se 
+	différencier. En effet, la banalisation de l'offre, une exigence accrue du client conduisent les
+	entreprises à faire évoluer leur offre dans le sens d'une plus grande personnalisation. Afn de parvenir
+	à cet objectif, l'entreprise est tenue de s'adapter à la profusion des canaux d'accès parallèles et en
+	particulier Internet.
+	L'arrivée des Nouvelles Technologies de l'Information et de la Communication a en effet un impact
+	très important sur les attitudes et les stratégies des entreprises face au CRM. Si bien que l'on peut se
+	demander si l'E-CRM, la gestion de la relation client par Internet constitue une véritable révolution
+	pour le CRM.
 	content...
 \end{comment}
-Étant donné que nous sommes dans un monde le smartphone deviant de plus en plus présent dans la vie  de l'être humain, il est impératif que toutes les transactions financières soient disponibles via celui-ci.  Sur la base de cette règle, fournir une application à travers laquelle les fonds peuvent être transférés de  vers l'intérieur du pays , est une nécessité.  Les applications existant , on constate qu'elles manquent de rapidité pour déterminer l'identité de l'expéditeur et la validité des comptes, en plus, la possibilité que ces pièce justificative soit invalide, ou qu'il y ait des fautes d'orthographe au cours de saisir.\newline
-Le remplacement de l’extraction manuelle par l’extraction automatique des données réduit considérablement le risque d’erreurs humaines. Il en résulte donc une amélioration globale de la précision. 
+Étant donné que nous sommes dans un monde où le smartphone devient de plus en plus présent dans la vie  de l'être humain, il est impératif que toutes les transactions financières soient disponibles via celui-ci.  Sur la base de cette règle, fournir une application à travers laquelle les fonds peuvent être transférés vers l'intérieur du pays , est une nécessité.  les applications existantes , On constate que manquent de rapidité pour déterminer l'identité de l'expéditeur et la validité des comptes. Enplus, la possibilité que ces pièces justificatives soient invalides, ou qu'il y ait des fautes d'orthographe au cours de la saisie.\newline
+Le remplacement de l’extraction manuelle par l’extraction automatique des données réduit considérablement le risque d’erreurs humaines. Il en résulte donc une amélioration globale de la précision.\newline
+CadoRim en tant que l'une des sociétés leaders dans ce domaine, nous a proposé ce sujet pour être notre projet de fin d'étude vu qu'il englobe certains  fonctionnalités applicatives. Dans l'ensenble, le projet représente une application mobile qui est destinée au transfert monétaire basé sur un système représentant le serveur de l'application. Il a deux composants, le premier consacrée à l'inscription des utilisateurs et leurs transactions, le deuxième est assigné aux relations clientèles ansi que le suivi des traçages de leurs activités dont le but est de segmenter le marché ce qui va donner au service Marketing une vision claire sur la situation de marché.  Le rapport va être présenté comme suit: 
+\begin{enumerate}
+	\item[-]le premier chapitre: nous allons parler sur le contexte général du projet, l'organisme d'accueil de la société et le cadre général du projet.
+	\item[-] Le deuxième chapitre: nous allons parler de l'analyse fonctionnelle et conceptuelle.
+	\item[-] Le troisième chapitre: on met l'accent sur l'environnement de travail.
+	\item[-] La conclusion: nous faisons une résumé sur les tâches réalisées de ce projet, ansi que des perspectives.
+	
+\end{enumerate}
 
 
 
- 
+
+
 %ou la possibilité de créer plusieurs comptes par le même NNI \footnote{Numéro National d'Identification}.
 
 
 
 
 \begin{comment}
-On l’entend désormais partout, le processus KYC (Know Your Customer) se déploie dans de nombreux secteurs d’activité. Véritable atout pour combattre la fraude et l’usurpation d’identité, un processus KYC, lorsqu’il est correctement déployé, offre aujourd’hui une multitude d’avantages aux utilisateurs comme aux entreprises. Mais quelles fonctions et quels usages se cachent derrière cet acronyme ? Comment a-t-il vu le jour et comment évolue-t-il face à la digitalisation des entreprises ? Découvrez, à travers ce guide, les atouts qu’un processus KYC automatisé peut apporter, ainsi que les différentes étapes qui en font une réussite.
+	On l’entend désormais partout, le processus KYC (Know Your Customer) se déploie dans de nombreux secteurs d’activité. Véritable atout pour combattre la fraude et l’usurpation d’identité, un processus KYC, lorsqu’il est correctement déployé, offre aujourd’hui une multitude d’avantages aux utilisateurs comme aux entreprises. Mais quelles fonctions et quels usages se cachent derrière cet acronyme ? Comment a-t-il vu le jour et comment évolue-t-il face à la digitalisation des entreprises ? Découvrez, à travers ce guide, les atouts qu’un processus KYC automatisé peut apporter, ainsi que les différentes étapes qui en font une réussite.
 \end{comment}
