--- a/Template LaTeX/TeXFiles/new_Conclusion.tex
+++ b/Template LaTeX/TeXFiles/new_Conclusion.tex
@@ -1,11 +1,32 @@
-\chapter*{Conclusion}
-\addcontentsline{toc}{chapter}{Conclusion}
-Dans ce chapitre, nous avons décrit brièvement le processus de développement de notre application
-de transfert d'argent en spécifiant l’environnement de développement, le choix des
-outils ainsi que la démarche suivie pour la réalisation.
-En effet, nous avons achevé l’implémentation tout en respectant la conception, mais les tests
-des différents cas d’utilisations sont toujours en cours envie d’une amélioration de l’application
-avant sa publication.
-En d’autres termes, nous avons la version beta (test et amélioration avant sa publication) de
-l’application installée dans notre environnement de développement. Aussi, nous avons prévu la
-période pendant laquelle la solution finale sera déployée les plateformes de téléchargement.
+\chapter*{Conclusion et perspectives}
+\addcontentsline{toc}{chapter}{Conclusion et perspectives}
+
+\begin{comment}
+	En d’autres termes, nous avons la version beta (test et amélioration avant sa publication) de
+	l’application installée dans notre environnement de développement. Aussi, nous avons prévu la
+	période pendant laquelle la solution finale sera déployée les plateformes de téléchargement.
+	
+	
+	
+	pour ce qui concerne les perspectives citons les points suivants :
+	-réaliser les fonctionnalité non achevé;
+	-abergement l'application sur google play sotre et app store;
+	-ajouter plus des fonctionnalités.
+\end{comment}
+En guise de conclusion, nous pouvons affirmer que le développement mobile est un domaine enrichissant au niveau expérimental et qu'il est en évolution constante.
+\newline
+
+Ce stage a été l'occasion de faire le lien entre  connaissances académiques et le monde professionnel. Il nous a permis de développer nos compétences techniques, d'approfondir nos connaissaces théoriques et les mettre en pratique. Cette expérience a aiguisé nos capacités d'analyse et de synthése, et nous a permis de renforcer nos connaissances concernant le développement mobile.
+\newline
+
+Enfin, ce stage fut une expérience trés enrichissante sur les deux plans personnel et professionnel. En effet, il a été l'occasion de découvrir le dynamisme et l'enthousiasme qui caractérisent l'équipe de CADORIM. Les réunions réguliéres effectuées avec l'encadrant nous a permis à mettre en oeuvre les concepts de gestion de projets acquises. 
+\newline
+Nous avons implémenté 21 fonctionnalités sur 23, soit un pourcentage de $93 \%$ , ce qui est tout à fait très significatif.
+\newline
+
+ Pour ce qui concerne les perspectives citons les points suivants :
+\begin{enumerate}
+	\item[-]réaliser les fonctionnalité non achevé;
+	\item[-]abergement l'application sur google play sotre et app store;
+	\item[-]ajouter plus des fonctionnalités.
+\end{enumerate}
