--- a/Template LaTeX/TeXFiles/new_realisation.tex
+++ b/Template LaTeX/TeXFiles/new_realisation.tex
@@ -422,6 +422,13 @@ Laravel est un framework web open-source écrit en  \href{https://fr.wikipedia.o
 	\caption{Architecture de Laravel}
 	\label{fig:birds}
 \end{figure}
+En commentant les sous-titres précédents, nous pouvons dire que nous avons utilisé le framework Flutter comme Frontend, pour développer l'application mobile et le framework Laravel comme backend, pour développer l'API serveur.
+
+
+
+
+
+
 \newpage
 \section{Implémentation}
 \subsection{Etape de réalisation}
