--- a/document.tex
+++ b/document.tex
@@ -347,9 +347,9 @@ To follow the evolution of information technology and the emergence of the mobil
 %	\textbf{SOA} : Service Oriented Architecture \newline
 	\textbf{OCR} : Optical Character Recognition  \newline
 	\textbf{MRZ} : Machine-Readable Zone   \newline
-	\textbf{UX} : User Experience
+	%\textbf{UX} : User Experience
 	 \newline  
-	\textbf{UI} : User Interface  
+%	\textbf{UI} : User Interface  
 	\thispagestyle{empty}
 	
 	\tableofcontents
